syntax = "proto3";
package SecretNetwork.x.registration.v1beta1;

import "gogoproto/gogo.proto";
import "x/registration/internal/types/types.proto";
import "x/registration/internal/types/msg.proto";

option go_package = "github.com/enigmampc/SecretNetwork/x/registration/internal/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

message GenesisState {
  repeated          RegistrationNodeInfo registration = 1 [(gogoproto.jsontag) = "reg_info"];
  MasterCertificate node_exch_master_certificate = 2 [(gogoproto.jsontag) = "node_exch_cert"];
  MasterCertificate io_master_certificate = 3 [(gogoproto.jsontag) = "io_exch_cert"];
}